fix spacing in text n link ttl

--- a/attestation/css/style0.scss
+++ b/attestation/css/style0.scss
@@ -1,10 +1,15 @@
 * {
   margin:0;
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
 
+//width problem fix attempt
+ .block-0 , .block-, li  {
+  width: 100%;
+}
 main {
   padding: 3.5rem 0;
+
 }
 
 .blue {
@@ -27,7 +32,7 @@ ul {
     margin-right: 1rem;
   }
   .arrow {
-    margin-left: 2.3rem;
+    margin-left: 3.1rem;
   }
 }
 
@@ -57,7 +62,10 @@ ul {
   }
 
   main {
+    
     margin: 2rem 2rem;
+    margin-right: 4rem;
+
   }
   h1 {
     font-size: 1.7rem;
@@ -69,5 +77,9 @@ ul {
 
   ul {
     margin-left: 0;
+    .arrow {
+      margin-left: 2.3rem;
+    }
   }
+
 }
